--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Methods for Adding CSS</title>
+    <style>
+      p {
+        background-color: forestgreen;
+        width: 100%;
+        height: 25px;
+        color: white;
+        text-align: left;
+        font-size: 20px;
+      }
+    </style>
   </head>
   <body>
-    <div>Style me via the external method!</div>
+    <div class="div">Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <button
+    style="background-color: orange; color: black; width: fit-content; height: 30px; text-align: center; font-size: larger; border: 2px solid gray;"
+    >Inline Method</button>
   </body>
 </html>
